PROJECT(k3d-bug-buddy)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${k3dsdk_BINARY_DIR})
INCLUDE_DIRECTORIES(${K3D_BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_GLIBMM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_GTKMM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_SIGC_INCLUDE_DIRS})

LINK_DIRECTORIES(${K3D_BOOST_LIB_DIRS})
LINK_DIRECTORIES(${K3D_GTKMM_LIB_DIRS})
LINK_DIRECTORIES(${K3D_SIGC_LIB_DIRS})

ADD_EXECUTABLE(k3d-bug-buddy main.cpp)
TARGET_LINK_LIBRARIES(k3d-bug-buddy k3dsdk)
TARGET_LINK_LIBRARIES(k3d-bug-buddy ${K3D_BOOST_PROGRAM_OPTIONS_LIBS})
TARGET_LINK_LIBRARIES(k3d-bug-buddy ${K3D_BOOST_REGEX_LIBS})
TARGET_LINK_LIBRARIES(k3d-bug-buddy ${K3D_GLIBMM_LIBS})
TARGET_LINK_LIBRARIES(k3d-bug-buddy ${K3D_GTKMM_LIBS})

IF(K3D_BUILD_NLS)
	INCLUDE_DIRECTORIES(${K3D_INTL_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(k3d-bug-buddy ${K3D_INTL_LIBS})
ENDIF(K3D_BUILD_NLS)

INSTALL(TARGETS k3d-bug-buddy DESTINATION bin)

